# cis29GroupProject_Winter2019

./: .gitignore  Animation.h  CMakeLists.txt  Collider.h  Menu.h  Platform.h  Player.cpp  README.md  build.sh  fxx  game.cpp  game.h  makefile  makefile~  todo
Editor/: Editor.html  dump.py
docs/: glitches_bugs.md  projectReqs.ms  quickBuild  todo.md
include/fxx/actors/: Actor.h  Brick.h  Collidable.h  Drawable.h  Mobile.h  Player.h  actor.h  brick.h  collidable.h  drawable.h  mobile.h  player.h
include/fxx/directors/: Game.h  Menu.h  game.h
include/fxx/hands/: Animation.h  Randomizer.h  animation.h
include/fxx/props/: Tile.h  tile.h
lib/: .libPlaceholder.txt
libsrc/actors/: Actor.cpp  Brick.cpp  Collidable.cpp  Drawable.cpp  Mobile.cpp  Player.cpp  actor.cpp  brick.cpp  drawable.cpp  mobile.cpp  player.cpp
player/: Animation.h  CMakeLists.txt  main.cpp  player.h
scripts/: build.sh  manualLink.sh
sfml_jumping/: Animation.h  CMakeLists.txt  Player.h  main.cpp
sfml_tutorial/: Animation.cpp  CMakeLists.txt  Collider.h  Player.h  main.cpp
share/levels/: .levelsPlaceholder.txt  guts
share/resources/: sample_instruction.txt  sample_scores.txt
src/: build.sh  main.cpp
src/fxx/actors/: actor.cpp  brick.cpp  collidable.cpp  player.cpp
src/fxx/directors/: .goutputstream-UYXIXZ  Game.cpp  Menu.cpp  game.cpp
src/fxx/hands/: Animation.cpp  Randomizer.cpp  animation.cpp
src/fxx/props/: Tile.cpp  tile.cpp
